# TurkishWordNet-C

./: CMakeLists.txt  README.md  conanfile.py
Test/: TestWordNet.c
src/: CMakeLists.txt  CategoryType.h  InterlingualDependencyType.h  InterlingualRelation.c  InterlingualRelation.h  Literal.c  Literal.h  SemanticRelation.c  SemanticRelation.h  SemanticRelationType.h  SynSet.c  SynSet.h  Synonym.c  Synonym.h  WordNet.c  WordNet.h
src/Similarity/: JCN.c  JCN.h  LCH.c  LCH.h  Lin.c  Lin.h  Resnik.c  Resnik.h  SimilarityPath.c  SimilarityPath.h  WuPalmer.c  WuPalmer.h
